[project]
name = "audio-fft"
version = "0.1.0"
description = ""
authors = [
    {name = "Santiagoflorido500",email = "sflorido@celerix.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.28.0,<2.0.0)",
    "numpy (>=1.24.0,<2.0.0)",
    "matplotlib (>=3.7.0,<4.0.0)",
    "sounddevice (>=0.4.6,<0.5.0)",
    "soundfile (>=0.12.1,<0.13.0)",
    "scipy (>=1.10.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
